crates/penrose_proc/tests/validate_bindings/invalid-keys-are-rejected.stderr
error: proc macro panicked
 --> tests/validate_bindings/invalid-keys-are-rejected.rs:5:5
  |
5 |     validate_user_bindings!(("notarealkey")());
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: 'notarealkey' is an invalid key binding: 'notarealkey' is not a known key: run 'xmodmap -pke' to see valid key names
          Key bindings should be of the form <modifiers>-<key name> or <key name> e.g:  M-j, M-S-slash, M-C-Up, XF86AudioMute
